<resources>
    <string name="app_name">Actions</string>
    <!-- Settings Activity Title -->
    <string name="title_activity_settings">Settings</string>

    <!-- Service Titles -->
    <string name="svc_enabled_title">Enabled</string>

    <!-- A2DP Titles -->
    <string name="a2dp_header">Bluetooth A2DP</string>
    <string name="a2dp_enabled_title">Enabled</string>

    <!-- Headset Titles -->
    <string name="headset_header">Headset</string>
    <string name="headset_enabled_title">Enabled</string>
    <string name="wired_events_threshold_title">Wired headset event threshold</string>
    <string name="wired_events_threshold_summary">Ignore headset events if they are within threshold time</string>

    <!-- App Chooser Titles -->
    <string name="category_app_chooser_title">Application chooser</string>
    <string name="app_chooser_left">Left</string>
    <string name="app_chooser_right">Right</string>
    <string name="app_chooser_timeout_title">App chooser dialog timeout</string>
    <string name="app_chooser_position_title">App chooser dialog position</string>
    <string name="autorun_single_app_title">Autorun single app</string>
    <string name="autorun_single_app_summary">Don\'t show app selection dialog</string>

</resources>