<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:key="actions_service_settings">

    <SwitchPreferenceCompat
        android:id="@+id/svc_enabled"
        app:key="svc_enabled"
        app:title="@string/svc_enabled_title" />

    <PreferenceCategory
        app:dependency="svc_enabled"
        app:title="@string/headset_header">

        <SwitchPreferenceCompat
            android:id="@+id/headset_enabled"
            app:key="headset_enabled"
            app:title="@string/headset_enabled_title" />

        <SeekBarPreference
            android:id="@+id/wired_events_threshold"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:defaultValue="0"
            android:max="5"
            app:dependency="headset_enabled"
            app:key="wired_events_threshold"
            app:min="0"
            app:showSeekBarValue="true"
            app:summary="@string/wired_events_threshold_summary"
            app:title="@string/wired_events_threshold_title" />

    </PreferenceCategory>

    <PreferenceCategory
        app:dependency="svc_enabled"
        app:title="@string/a2dp_header">

        <SwitchPreferenceCompat
            android:id="@+id/a2dp_enabled"
            app:key="a2dp_enabled"
            app:title="@string/a2dp_enabled_title" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="category_app_chooser"
        android:title="@string/category_app_chooser_title"
        app:dependency="svc_enabled">

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="autorun_single_app"
            android:summary="@string/autorun_single_app_summary"
            android:title="@string/autorun_single_app_title" />

        <SeekBarPreference
            android:defaultValue="5"
            android:key="app_chooser_timeout"
            android:max="60"
            android:title="@string/app_chooser_timeout_title"
            app:min="0"
            app:showSeekBarValue="true" />

        <ListPreference
            android:entries="@array/app_chooser_position_entries"
            android:entryValues="@array/app_chooser_position_values"
            android:key="app_chooser_position"
            android:title="@string/app_chooser_position_title" />

    </PreferenceCategory>

</PreferenceScreen>